k8s/netflix-next/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-next-deployment
  namespace: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: netflix-next
  template:
    metadata:
      labels:
        app: netflix-next
    spec:
      containers:
        - name: netflix-next-container
          image: 861111588204.dkr.ecr.ap-southeast-2.amazonaws.com/ai-call-center-deps-cache:334ba81002c6d3cc0cb1a3979ef2bd8b4bfb2aa3
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: regcred
