k8s/netflix-next/service.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: netflix-next-service
# spec:
#   type: LoadBalancer
#   selector:
#     app: netflix-next
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 3000
#       nodePort: 30000

apiVersion: v1
kind: Service
metadata:
  name: netflix-next-service
  namespace: test
spec:
  type: ClusterIP
  selector:
    app: netflix-next
  ports:
    - protocol: TCP
      port: 80         # 供 ingress 用
      targetPort: 3000 # 容器端口
