k8s/netflix-next/ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   annotations:
#     cert-manager.io/cluster-issuer: letsencrypt-staging
#   name: netflix-next-ingress
#   namespace: default
# spec:
#   ingressClassName: public
#   rules:
#     - host: netflix.kaizer.live
#       http:
#         paths:
#           - path: /.well-known/acme-challenge/
#             pathType: Prefix
#             backend:
#               service:
#                 name: cm-acme-http-solver-service
#                 port:
#                   number: 80
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: netflix-next-service
#                 port:
#                   number: 80
#   tls:
#     - hosts:
#         - netflix.kaizer.live
#       secretName: netflix-next-tls

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-next-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: netflix.densewillow.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netflix-next-service
                port:
                  number: 80
  tls:
    - hosts:
        - netflix.densewillow.com
      secretName: netflix-next-tls # 跟刚才创建的 secret 保持一致
